Contrast/Blackhat fixed

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2011,8 +2011,7 @@ pre code {
 }
 
 .row {
-    margin-right: -15px;
-    margin-left: -15px
+    margin: auto;
 }
 
 .col-lg-1,
@@ -5251,7 +5250,9 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-nav>li>a {
     padding-top: 10px;
     padding-bottom: 10px;
-    line-height: 20px
+    line-height: 20px;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 @media (max-width:767px) {
